--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ version = "0.2.0"
 anyhow = "1.0.66"
 async-openai = "0.28"
 flume = "0.10"
-mlua = { version = "=0.11.0-beta.1", features = [
+mlua = { version = "0.11.5", features = [
     "luau",
     "anyhow",
     "async",
